fixed margin whitespace on home page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,15 @@
+main {
+  height: 100vh;
+}
+
+nav.navbar.navbar-default {
+  margin-bottom: 0px;
+}
+
+h1 {
+  margin-top: 0px;
+}
+
 .horizontal-collapse {
   height: 70px;
 }
